--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "@storybook/node-logger": "^6.1.14",
     "@storybook/preset-create-react-app": "^3.1.5",
     "@storybook/react": "^6.1.14",
+    "@storybook/storybook-deployer": "^2.8.7",
     "faker": "^5.1.0"
   }
 }
